--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.6.0",
     "@react-navigation/stack": "^5.6.0",
+    "aws-amplify": "^3.0.18",
     "expo": "~37.0.3",
     "formik": "^2.1.4",
     "react": "~16.9.0",
@@ -24,7 +25,8 @@
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "@react-native-community/netinfo": "5.5.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
