--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -9,12 +9,20 @@
 					"defaultAuthentication": {
 						"authenticationType": "API_KEY",
 						"apiKeyConfig": {
-							"description": "stocks1",
+							"description": "db",
 							"apiKeyExpirationDays": "365"
 						}
 					}
 				}
 			}
+		}
+	},
+	"auth": {
+		"stocks16fc04c41": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": [],
+			"customAuth": false
 		}
 	}
 }
