--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -9,7 +9,7 @@
 					"defaultAuthentication": {
 						"authenticationType": "API_KEY",
 						"apiKeyConfig": {
-							"description": "db",
+							"description": "stocks1",
 							"apiKeyExpirationDays": "365"
 						}
 					}
@@ -25,28 +25,5 @@
 			"customAuth": false
 		}
 	},
-	"function": {
-		"stocks1d722b11b": {
-			"build": true,
-			"providerPlugin": "awscloudformation",
-			"service": "Lambda",
-			"dependsOn": [
-				{
-					"category": "api",
-					"resourceName": "stocks1",
-					"attributes": [
-						"GraphQLAPIIdOutput",
-						"GraphQLAPIEndpointOutput"
-					]
-				},
-				{
-					"category": "auth",
-					"resourceName": "stocks16fc04c41",
-					"attributes": [
-						"UserPoolId"
-					]
-				}
-			]
-		}
-	}
+	"function": {}
 }
