--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "aws-amplify": "^3.0.18",
     "expo": "~37.0.3",
     "formik": "^2.1.4",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-moment": "^0.9.7",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-chart-kit": "^6.2.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-svg": "^11.0.1",
-    "react-native-web": "~0.11.7",
+    "react-native-svg": "11.0.1",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
